--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Run Go Tests
         run: go test ./... --cover
 
-  formatting:
-    name: Formatting
+  style:
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
@@ -32,8 +32,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.0"
+          go-version: '1.23.0'
 
-      - name: Run Formatting
-        run: go fmt ./...
-
+      - name: Check formatting
+        run: test -z $(go fmt ./...)
